<?xml version="1.0" encoding="utf-8"?>
<resources>
    my_app_nam
    <string name="my_app_name">Applite</string>
    <string name="app_name">ApplitHome</string>
    <string name="personal">Personal</string>

    <string name="load_more">loading...</string>
    <string name="manager_catergory_title">manager</string>
    <string name="download_manager">Download manager</string>
    <string name="upgrade_manager">Upgrade manager</string>
    <string name="logo_manager">Logo manager</string>
    <string name="zero_flow_update">Zero flow update</string>
    <string name="setting">Setting</string>
    <string name="lucky_draw">Lucky draw</string>
    <string name="load_end">ending...</string>

    <string name="install">Install</string>

    <string name="rules_title">Rules</string>
    <string name="ok">OK</string>

    <string name="gametitle">Games</string>

    <string name="IntegralProblem">Integral Problem</string>

    <string name="beyond_limit">Beyond the limit of the day</string>

    <string name="rules_no1">Rules no1</string>
    <string name="rules_no2">Rules no2</string>
    <string name="rules_no3">Rules no3</string>
    <string name="rules_no4">Rules no4</string>
    <string name="rules_no5">Rules no5</string>
    <string name="rules_no6">Rules no6</string>
    <string name="rules_no7">Rules no7</string>
    <string name="rules_else">Rules else</string>
    <string name="rules_end">Rules end</string>

    <string name="update_remind">Remind when updating</string>
    <string name="notification">Notification</string>
    <string name="update_notification">Update Notification</string>
    <string name="other_function">Other Function</string>
    <string name="clean_cache">Clean Cache</string>
    <string name="clean_cache_detail">Clean You Cache</string>
    <string name="delete_package">Delete Package</string>
    <string name="delete_package_detail">Delete The Package When Finish The Setup</string>
    <string name="no_picture">No Picture</string>
    <string name="no_picture_detail">Only Download Picture When You Are Using WIFI</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="help">Help</string>

    <string name="dialog_dataclean_title">清除缓存</string>
    <string name="dialog_dataclean_content">确定要删除所有数据吗?</string>

    <string name="dialog_feedback_title">我们很重视您的意见和建议</string>
    <string name="tag_rb1">下载失败</string>
    <string name="tag_rb2">找不到应用</string>
    <string name="tag_rb3">操作不流畅</string>
    <string name="tag_rb4">界面不好</string>
    <string name="tag_rb5">闪退或重启</string>
    <string name="tag_rb6">账号有问题</string>
    <string name="dialog_feedback_hint">请输入您的意见和建议</string>
    <string name="tv_1">被采纳的意见会获得</string>
    <string name="tv_2">小奖品</string>
    <string name="tv_3">，记得留下联系方式哦～</string>
    <string name="dialog_contact_hint">手机/QQ邮箱</string>

    <string name="testimonial_0">恭喜您抽中 10 积分</string>
    <string name="testimonial_1">恭喜您抽中 50 积分</string>
    <string name="testimonial_2">恭喜您抽中 100 积分</string>
    <string name="testimonial_3">恭喜您抽中手机流量10M</string>
    <string name="testimonial_4">恭喜您抽中手机一台</string>
    <string name="testimonial_5">谢谢参与</string>


    <!-- 设置模块字符串资源 -->
    <string name="zero_flow_update_detail">零流量下载</string>
    <string name="data_throughput_setting">省流量设置</string>
    <string name="smart_update">零流量更新</string>
    <string name="smart_update_detail">WIFI下自动更新</string>
    <string name="smart_show">智能无图</string>
    <string name="smart_show_detail">2G/3G/4G网络下切换无图模式</string>

    <string name="app_settings">应用设置</string>
    <string name="push_notification">允许推送更新提示</string>
    <string name="delete_apkfile">安装后自动删除安装包</string>
    <string name="download_path">下载存储路径</string>
    <string name="download_thread">最多同时下载任务</string>
    <string name="download_size">数据网络下载限制</string>
    <string name="download_limit_onoff">使用下载限制功能</string>
    <string name="download_limit_detail">数据网络下载提示</string>

    <string name="update">检查更新</string>
    <string name="onekey_feedback">一键反馈</string>

    <string name="select_no_limit">允许数据网络下载任何大小文件</string>
    <string name="select_20_limit">大于20MB的文件，等待有WLAN时下载</string>
    <string name="select_10_limit">大于10MB的文件，等待有WLAN时下载</string>
    <string name="select_5_limit">大于5MB的文件，等待有WLAN时下载</string>
    <string name="select_2_limit">大于2MB的文件，等待有WLAN时下载</string>
    <string name="select_1_limit">大于1MB的文件，等待有WLAN时下载</string>
    <string name="select_less_1_limit">大于512KB的文件，等待有WLAN时下载</string>
    <string name="select_all_limit">使用数据网络下载任何大小文件都等待WALAN网络</string>



</resources>
