<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_feedback"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/dialog_feedback_title"
        android:textColor="#EE7600"
        android:textSize="18dp" />

    <include layout="@layout/default_line_setting"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/dialog_feedback_rg1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/dialog_feedback_btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:tag="@string/tag_rb1"
                android:text="@string/tag_rb1"
                android:textSize="14dp" />

            <CheckBox
                android:id="@+id/dialog_feedback_btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:tag="@string/tag_rb2"
                android:text="@string/tag_rb2"
                android:textSize="14dp" />

            <CheckBox
                android:id="@+id/dialog_feedback_btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:tag="@string/tag_rb3"
                android:text="@string/tag_rb3"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_feedback_rg2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <CheckBox
                android:id="@+id/dialog_feedback_btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:tag="@string/tag_rb4"
                android:text="@string/tag_rb4"
                android:textSize="14dp" />

            <CheckBox
                android:id="@+id/dialog_feedback_btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:tag="@string/tag_rb5"
                android:text="@string/tag_rb5"
                android:textSize="14dp" />

            <CheckBox
                android:id="@+id/dialog_feedback_btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:tag="@string/tag_rb6"
                android:text="@string/tag_rb6"
                android:textSize="14dp" />
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/dialog_feedback_et1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:background="@drawable/edittext_shape"
        android:gravity="start"
        android:hint="@string/dialog_feedback_hint"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:singleLine="true"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/tv_1"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_2"
            android:textColor="#EE7600"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_3"
            android:textSize="12dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/dialog_feedback_et2"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:background="@drawable/edittext_shape"
        android:hint="@string/dialog_contact_hint"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:textSize="14dp" />

</LinearLayout>
